Expand and enrich content across all seven tracks
Roughly double the interview-question bank (816 -> 1,668) and bring
illustrations, quizzes, and active-recall coverage to every track.

Questions: java 156->310, dsa 132->262, oop 100->206,
design-patterns 76->183, system-design 117->235, database 112->233,
multithreading 123->239. Coverage targets the most-asked interview
questions plus senior-level differentiators, deduplicated against the
existing banks.

Content: Java quizzes 25->84 topics and diagrams 53->83; added mermaid
diagrams, flashcard decks, and algorithm walkthroughs across tracks;
deepened thin topics with edge cases, complexity, and real-world usage.

Build: give each track's content+questions its own chunk in
vite.config.ts so the enlarged corpus no longer overruns the bundler's
WASM parser memory during the production build.